bug fix in Single Electron trigger matching

--- a/config/HH_bbWW/Run3_2022/samples.yaml
+++ b/config/HH_bbWW/Run3_2022/samples.yaml
@@ -12,10 +12,10 @@ GLOBAL:
     - keep WZ
     - keep ZZ
     - keep ^EGamma_.*
-    - keep ^Muon_.*
-    - keep ^DoubleMuon_.*
-    - keep ^SingleMuon_.*
-    - keep ^MuonEG_.*
+      #- keep ^Muon_.*
+      #- keep ^DoubleMuon_.*
+      #- keep ^SingleMuon_.*
+      #- keep ^MuonEG_.*
   use_stitching: false
 
 
