code for data mc plots

--- a/config/HH_bbWW/Run3_2022/samples.yaml
+++ b/config/HH_bbWW/Run3_2022/samples.yaml
@@ -2,20 +2,47 @@ GLOBAL:
   triggerFile: config/HH_bbWW/Run3_2022/triggers.yaml
   sampleSelection:
     - drop ^.*
-    - keep ^TT.*
-    - keep ^ST.*
-    - keep ^GluGlutoRadiontoHHto2B2Vto2B2L2Nu.*
+    ##- keep ^TT.*
+    - keep TTto2L2Nu
+    - keep TTtoLNu2Q
+    - keep TTto4Q
+    - keep ^QCD.*MuEnrichedPt5
+    - keep ^QCD.*EMEnriched
+    ## - keep ^QCD
+    ## - keep ^DY
+    ## - keep TTto2L2Nu
+    ##- keep ^ST.*
+    - keep ST_s_channel_antitop_4f_leptonDecays
+    - keep ST_s_channel_top_4f_leptonDecays
+    - keep ST_t_channel_antitop_4f_InclusiveDecays
+    - keep ST_t_channel_top_4f_InclusiveDecays
+    - keep ST_tW_antitop_2L2Nu
+    - keep ST_tW_antitop_4Q
+    - keep ST_tW_antitop_LNu2Q
+    - keep ST_tW_top_2L2Nu
+    - keep ST_tW_top_4Q
+    - keep ST_tW_top_LNu2Q
+    - keep GluGlutoRadiontoHHto2B2Vto2B2L2Nu_M_260
+    - keep GluGlutoRadiontoHHto2B2Vto2B2L2Nu_M_450
+    - keep GluGlutoRadiontoHHto2B2Vto2B2L2Nu_M_800
     - keep DYto2L_M_10to50_amcatnloFXFX
     - keep DYto2L_M_50_amcatnloFXFX
-    - keep WtoLNu_amcatnloFXFX
+    ## - keep ^DY.*
+    ##- keep ^WtoLNu_amcatnloFXFX SL
+    - keep TTto4Q
+    - keep TTWH
+    - keep TTWW
+    - keep TTZH
+    - keep TTZToQQ
+    - keep TTZZ
     - keep WW
     - keep WZ
     - keep ZZ
     - keep ^EGamma_.*
-      #- keep ^Muon_.*
-      #- keep ^DoubleMuon_.*
-      #- keep ^SingleMuon_.*
-      #- keep ^MuonEG_.*
+    - keep ^Muon_.*
+    - keep ^DoubleMuon_.*
+    - keep ^SingleMuon_.*
+    - keep ^MuonEG_.*
   use_stitching: false
 
 
