--- a/config/HH_bbWW/plot/histograms.yaml
+++ b/config/HH_bbWW/plot/histograms.yaml
@@ -4,40 +4,72 @@ lep1_type:
   x_title: lep1_type (Our first plot!)
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 lep1_phi:
-  x_bins: "50|-3.2:3.2"
+  #x_bins: "50|-3.2:3.2"
+  x_bins: [-3.2, -2.88, -2.56, -2.24, -1.92, -1.6, -1.28, -0.96, -0.64, -0.32, 0.0, 0.32, 0.64, 0.96, 1.28, 1.6, 1.92, 2.24, 2.56, 2.88, 3.2]
   x_title: lep1_phi
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 lep1_eta:
-  #x_bins: "50|-2.5:2.5" #For now in HistPlotter, the getNewBins() function requires integers? Dumb!
-  x_bins: [-2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5]
+  x_bins: "50|-2.5:2.5" #For now in HistPlotter, the getNewBins() function requires integers? Dumb!
+  #x_bins: [-2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5]
   x_title: lep1_eta
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 lep1_pt:
-  x_bins: "50|0:500"
+  x_bins: "50|20:500"
   x_title: lep1_pt [GeV]
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
-
+lep1_Muon_pfRelIso04_all:
+  #x_bins: "50|0:0.5"
+  x_bins: [0.0, 0.03, 0.05, 0.08, 0.1, 0.13, 0.15, 0.18, 0.2, 0.23, 0.25, 0.28, 0.3, 0.33, 0.35, 0.38, 0.4, 0.43, 0.45, 0.48, 0.5]
+  x_title: Muon1_Iso [GeV]
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+lep2_Muon_pfRelIso04_all:
+  #x_bins: "50|0:0.5"
+  x_bins: [0.0, 0.03, 0.05, 0.08, 0.1, 0.13, 0.15, 0.18, 0.2, 0.23, 0.25, 0.28, 0.3, 0.33, 0.35, 0.38, 0.4, 0.43, 0.45, 0.48, 0.5]
+  x_title: Muon2_Iso [GeV]
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+lep1_Electron_miniPFRelIso_all:
+  #x_bins: "50|0:0.5"
+  x_bins: [0.0, 0.03, 0.05, 0.08, 0.1, 0.13, 0.15, 0.18, 0.2, 0.23, 0.25, 0.28, 0.3, 0.33, 0.35, 0.38, 0.4, 0.43, 0.45, 0.48, 0.5]
+  x_title: Ele1_Iso [GeV]
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+lep2_Electron_miniPFRelIso_all:
+  #x_bins: "50|0:0.5"
+  x_bins: [0.0, 0.03, 0.05, 0.08, 0.1, 0.13, 0.15, 0.18, 0.2, 0.23, 0.25, 0.28, 0.3, 0.33, 0.35, 0.38, 0.4, 0.43, 0.45, 0.48, 0.5]
+  x_title: Ele2_Iso [GeV]
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
 lep1_charge:
   x_bins: "5|-2.5:2.5"
   x_title: lep1_charge
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 
@@ -48,32 +80,39 @@ lep2_type:
   x_title: lep2_type (Our first plot!)
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 lep2_phi:
-  x_bins: "50|-3.2:3.2"
+  #x_bins: "50|-3.2:3.2"
+  x_bins: [-3.2, -2.6, -2.0, -1.4, -0.8, -0.2, 0.4, 1.0, 1.6, 2.2, 2.8, 3.2]
   x_title: lep2_phi
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 lep2_eta:
   #x_bins: "50|-2.5:2.5"
-  x_bins: [-2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5]
+  #x_bins: [-2.5, -2.0, -1.5, -1.0, -0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5]
+  x_bins: [-2.5, -2.34193548, -2.18387097, -2.02580645, -1.86774194, -1.70967742,
+          -1.5516129, -1.39354839, -1.23548387, -1.07741935, -0.91935484, -0.76129032,
+          -0.60322581, -0.44516129, -0.28709677, -0.12903226, 0.02903226, 0.18709677,
+          0.34516129, 0.50322581, 0.66129032, 0.81935484, 0.97741935, 1.13548387,
+          1.29354839, 1.4516129, 1.60967742, 1.76774194, 1.92580645, 2.08387097,
+          2.24193548, 2.5]
   x_title: lep2_eta
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 lep2_pt:
-  x_bins: "50|0:500"
+  x_bins: "50|15:500"
   x_title: lep2_pt [GeV]
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 lep2_charge:
@@ -81,7 +120,7 @@ lep2_charge:
   x_title: lep2_charge
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 bjet1_btagPNetB:
@@ -90,7 +129,7 @@ bjet1_btagPNetB:
   x_title: bjet1 btagPNetB
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 bjet2_btagPNetB:
@@ -99,7 +138,7 @@ bjet2_btagPNetB:
   x_title: bjet2 btagPNetB
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 dnn_M300_Signal:
@@ -130,27 +169,27 @@ dnn_M700_Signal:
 
 ########## diLep BEGIN ##########
 diLep_mass:
-  x_bins: "100|0:200"
+  x_bins: "200|12:400"
   x_title: diLep mass (mumu)
   y_title: Events
   use_log_y: True
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 Lep1Jet1Jet2_mass:
-  x_bins: "50|0:1000"
+  x_bins: "100|0:1000"
   x_title: Lep1Jet1Jet2 mass
   y_title: Events
   use_log_y: True
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 Lep1Lep2Jet1Jet2_mass:
-  x_bins: "50|0:1000"
+  x_bins: "100|0:1000"
   x_title: Lep1Lep2Jet1Jet2 mass
   y_title: Events
   use_log_y: True
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 MT_tot:
@@ -158,7 +197,7 @@ MT_tot:
   x_title: MT tot
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 MT_lep1:
@@ -166,7 +205,7 @@ MT_lep1:
   x_title: MT lep1
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
   divide_by_bin_width: False
 
 MT_lep2:
@@ -174,5 +213,155 @@ MT_lep2:
   x_title: MT lep2
   y_title: Events
   use_log_y: False
-  max_y_sf: 1.2
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+bb_mass:
+  x_bins: "100|0:300"
+  x_title: m(bb)
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+bb_mass_PNetRegPtRawCorr:
+  x_bins: "100|0:300"
+  x_title: m(bb)_PNetRegPtRawCorr
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+bb_mass_PNetRegPtRawCorr_PNetRegPtRawCorrNeutrino:
+  x_bins: "100|0:300"
+  x_title: m(bb)_RawCorr_RawCorrNeutrino
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+Njets:
+  x_bins: "10|0:10"
+  x_title: Njets
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+bjet1_pt:
+  x_bins: "50|20:500"
+  x_title: bjet1_pt [GeV]
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+bjet2_pt:
+  x_bins: "50|20:500"
+  x_title: bjet2_pt [GeV]
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+HT:
+  x_bins: "100|40:1000"
+  x_title: HT [GeV]
+  y_title: Events
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+dR_dilep:
+  #x_bins: "20|0:2.0"
+  x_bins: [0.0, 0.1, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.0]
+  x_title: "dR between leptons"
+  y_title: "Events"
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+dR_dibjet:
+  #x_bins: "20|0:2.5"
+  x_bins: [0.0, 0.12, 0.25, 0.37, 0.5, 0.62, 0.75, 0.87, 1.0, 1.12, 1.25, 1.37, 1.5, 1.62, 1.75, 1.87, 2.0, 2.12, 2.25, 2.37, 2.5]
+  x_title: "dR between two jets"
+  y_title: "Events"
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+dR_dilep_dibjet:
+  #x_bins: "20|0:3.0"
+  x_bins: [0.0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1, 2.25, 2.4, 2.55, 2.7, 2.85, 3.0]
+  x_title: "dR between dilepton and dijet system"
+  y_title: "Events"
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+
+dPhi_lep1_lep2:
+  #x_bins: "10|0:3.14"  # Since Δφ ranges from 0 to π
+  x_bins: [0.0, 0.32, 0.64, 0.96, 1.28, 1.6, 1.92, 2.24, 2.56, 2.88, 3.14]
+  x_title: "dPhi between lepton 1 and lepton 2"
+  y_title: "Events"
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+
+dPhi_jet1_jet2:
+  #x_bins: "10|0:3.14"  # Δφ ranges from 0 to π (between two jets)
+  x_bins: [0.0, 0.348, 0.696, 1.044, 1.392, 1.74, 2.088, 2.436, 2.784, 3.14]
+  x_title: "dPhi between jet 1 and jet 2"
+  y_title: "Events"
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+
+dPhi_MET_dilep:
+  #x_bins: "10|0:3.14"  # Δφ between MET and dilepton (usually in range [0, π])
+  x_bins: [0.0, 0.348, 0.696, 1.044, 1.392, 1.74, 2.088, 2.436, 2.784, 3.14]
+  x_title: "dPhi between MET and dilepton system"
+  y_title: "Events"
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+
+dPhi_MET_dibjet:
+  #x_bins: "10|0:3.14"  # Δφ between MET and dibjet system (typically between 0 and π)
+  x_bins: [0.0, 0.348, 0.696, 1.044, 1.392, 1.74, 2.088, 2.436, 2.784, 3.14]
+  x_title: "dPhi between MET and dibjet system"
+  y_title: "Events"
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+
+min_dR_lep0_jets:
+  #x_bins: "20|0:2.5"  # The minimum dR between the first lepton and all jets
+  x_bins: [0.0, 0.13157894736842105, 0.2631578947368421, 0.39473684210526316, 0.5263157894736842,
+          0.6578947368421053, 0.7894736842105263, 0.9210526315789473, 1.0526315789473684,
+          1.1842105263157894, 1.3157894736842104, 1.4473684210526316, 1.5789473684210527,
+          1]
+
+  x_title: "min dR between lepton 0 and jets"
+  y_title: "Events"
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+
+min_dR_lep1_jets:
+  #x_bins: "20|0:2.5"  # The minimum dR between the second lepton and all jets
+  x_bins: [0.0, 0.13157894736842105, 0.2631578947368421, 0.39473684210526316, 0.5263157894736842,
+          0.6578947368421053, 0.7894736842105263, 0.9210526315789473, 1.0526315789473684,
+          1.1842105263157894, 1.3157894736842104, 1.4473684210526316, 1.5789473684210527,
+          1]
+  x_title: "min dR between lepton 1 and jets"
+  y_title: "Events"
+  use_log_y: False
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+PuppiMET_pt:
+  x_bins: "30|0:500"  # Adjust the number of bins and range according to your data (e.g., MET can vary from 0 to 500 GeV)
+  x_title: "Puppi MET Transverse Momentum [GeV]"
+  y_title: "Events"
+  use_log_y: True  # MET often spans several orders of magnitude, so a log scale might be useful
+  max_y_sf: 1.5
+  divide_by_bin_width: False
+
+PuppiMET_phi:
+  #x_bins: "10|-3.14:3.14"  # The azimuthal angle (phi) typically ranges from -π to +π
+  x_bins: [-3.14, -2.513333333333333, -1.8866666666666665, -1.26, -0.6333333333333333,
+          0.0, 0.6333333333333333, 1.26, 1.8866666666666665, 2.513333333333333]
+  y_title: "Events"
+  use_log_y: False
+  max_y_sf: 1.5
   divide_by_bin_width: False
