--- a/config/Run3_2022/samples.yaml
+++ b/config/Run3_2022/samples.yaml
@@ -428,37 +428,37 @@ QCD_PT_10to30_EMEnriched:
   crossSection: QCD_PT-10to30_EMEnriched
   generator: pythia8
   miniAOD: /QCD_PT-10to30_EMEnriched_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
-  sampleType: QCDEMu
+  sampleType: QCDEM
 QCD_PT_30to50_EMEnriched:
   crossSection: QCD_PT-30to50_EMEnriched
   generator: pythia8
   miniAOD: /QCD_PT-30to50_EMEnriched_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
-  sampleType: QCDEMu
+  sampleType: QCDEM
 QCD_PT_50to80_EMEnriched:
   crossSection: QCD_PT-50to80_EMEnriched
   generator: pythia8
   miniAOD: /QCD_PT-50to80_EMEnriched_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
-  sampleType: QCDEMu
+  sampleType: QCDEM
 QCD_PT_80to120_EMEnriched:
   crossSection: QCD_PT-80to120_EMEnriched
   generator: pythia8
   miniAOD: /QCD_PT-80to120_EMEnriched_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
-  sampleType: QCDEMu
+  sampleType: QCDEM
 QCD_PT_120to170_EMEnriched:
   crossSection: QCD_PT-120to170_EMEnriched
   generator: pythia8
   miniAOD: /QCD_PT-120to170_EMEnriched_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
-  sampleType: QCDEMu
+  sampleType: QCDEM
 QCD_PT_170to300_EMEnriched:
   crossSection: QCD_PT-170to300_EMEnriched
   generator: pythia8
   miniAOD: /QCD_PT-170to300_EMEnriched_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
-  sampleType: QCDEMu
+  sampleType: QCDEM
 QCD_PT_300toInf_EMEnriched:
   crossSection: QCD_PT-300toInf_EMEnriched
   generator: pythia8
   miniAOD: /QCD_PT-300toInf_EMEnriched_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
-  sampleType: QCDEMu
+  sampleType: QCDEM
 
 ############## QCD_PT-*to*_MuEnriched ##############
 QCD_PT_15to20_MuEnrichedPt5:
